# FEM

./: .gitignore  .travis.yml  README.md  pyproject.toml
fem/: aggregator.py  components.py  data.json  file.py  globaldata.py  grid.py  integrationpoint.py  main.py  uelement.py
tests/: test_fem.py
