[tool.poetry]
name = "fem"
version = "0.1.0"
description = "Finite Elements Method project"
authors = ["Kacper Krzyzak"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
black = {git = "https://github.com/psf/black.git"}

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
